--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -1571,6 +1571,21 @@
     "cron-expression-parser": {
       "name": "Cron अभिव्यक्ति विश्लेषक",
       "description": "Cron सिंटैक्स को जाँचें और अगली रनिंग समय देखें।",
+      "format_title": "Cron अभिव्यक्ति प्रारूप गाइड",
+      "format_description": "Cron अभिव्यक्ति की संरचना और विशेष वर्णों को समझें।",
+      "format": {
+        "minute_desc": "मिनट (0 - 59)",
+        "hour_desc": "घंटा (0 - 23)",
+        "day_desc": "महीने का दिन (1 - 31)",
+        "month_desc": "महीना (1 - 12) या JAN, FEB ...",
+        "weekday_desc": "सप्ताह का दिन (0 - 6, रविवार=0) या SUN, MON ...",
+        "symbols": {
+          "wildcard": "कोई भी मान",
+          "range": "मानों की सीमा (उदा: 1-10)",
+          "list": "मानों की सूची (उदा: 1,10)",
+          "step": "चरण मान (उदा: */10)"
+        }
+      },
       "input_title": "Cron अभिव्यक्ति",
       "input_description": "मानक 5-फ़ील्ड Cron अभिव्यक्ति दर्ज करें और प्रत्येक फ़ील्ड तथा भविष्य के निष्पादन समय का विश्लेषण करें।",
       "expression_label": "अभिव्यक्ति",
