--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -1645,6 +1645,71 @@
         "keywords": "Cron अभिव्यक्ति,Cron वैलिडेटर,Cron शेड्यूल,Cron परीक्षण,ऑटोमेशन उपकरण"
       }
     },
+    "curl-converter": {
+      "name": "cURL कमांड कन्वर्टर",
+      "description": "cURL कमांड को विभिन्न प्रोग्रामिंग भाषाओं के कोड में परिवर्तित करें और परीक्षण करें",
+      "input_title": "cURL कमांड दर्ज करें",
+      "input_desc": "अपना cURL कमांड पेस्ट या टाइप करें",
+      "input_placeholder": "cURL कमांड दर्ज करें...\nउदाहरण: curl -X POST https://api.example.com/users \\\n  -H 'Content-Type: application/json' \\\n  -d '{\"name\":\"John\",\"email\":\"john@example.com\"}'",
+      "output_title": "उत्पन्न कोड",
+      "output_desc": "परिवर्तित कोड यहां दिखाया जाएगा",
+      "output_placeholder": "परिवर्तित कोड यहां दिखाई देगा...",
+      "convert_button": "कोड परिवर्तित करें",
+      "test_button": "अनुरोध परीक्षण करें",
+      "test_result_title": "अनुरोध परिणाम",
+      "test_result_desc": "API अनुरोध प्रतिक्रिया",
+      "language_label": "लक्ष्य भाषा",
+      "invalid_command": "अमान्य cURL कमांड",
+      "conversion_failed": "रूपांतरण विफल, कृपया कमांड प्रारूप जांचें",
+      "test_failed": "अनुरोध विफल",
+      "tips_title": "उपयोग गाइड",
+      "tip1_title": "कमांड प्रारूप",
+      "tip1_desc": "विभिन्न पैरामीटर और विकल्पों के साथ मानक cURL कमांड का समर्थन करता है",
+      "tip2_title": "समर्थित पैरामीटर",
+      "tip2_desc": "-X/-H/-d/--data/--header और अन्य सामान्य पैरामीटर का समर्थन करता है",
+      "tip3_title": "बहु-भाषा समर्थन",
+      "tip3_desc": "JavaScript, Python, Node.js, PHP, Go और अधिक में परिवर्तित करें",
+      "tip4_title": "ऑनलाइन परीक्षण",
+      "tip4_desc": "सर्वर प्रॉक्सी के माध्यम से API अनुरोध परीक्षण, कोई CORS प्रतिबंध नहीं, पूर्ण प्रतिक्रिया देखें",
+      "introduction": "cURL कमांड कन्वर्टर डेवलपर्स के लिए डिज़ाइन किया गया एक व्यावहारिक उपकरण है जो cURL कमांड को कई प्रोग्रामिंग भाषाओं में HTTP अनुरोध कोड में जल्दी से परिवर्तित करता है। यह JavaScript Fetch, Python Requests, Node.js Axios, PHP cURL, और Go net/http सहित मुख्यधारा की भाषाओं और फ्रेमवर्क का समर्थन करता है। न केवल यह कोड उत्पन्न कर सकता है, बल्कि ब्राउज़र में सीधे API अनुरोध परीक्षण भी कर सकता है और प्रतिक्रिया परिणाम देख सकता है। चाहे वह API डिबगिंग हो, दस्तावेज़ीकरण लेखन हो या कोड माइग्रेशन, यह विकास दक्षता में काफी सुधार कर सकता है।",
+      "features": [
+        "🔄 विभिन्न पैरामीटर प्रारूपों के समर्थन के साथ cURL कमांड को बुद्धिमानी से पार्स करें",
+        "💻 कई प्रोग्रामिंग भाषाओं का समर्थन: JavaScript, Python, Node.js, PHP, Go",
+        "🎯 HTTP विधियों, हेडर, अनुरोध बॉडी और अन्य पैरामीटर को स्वचालित रूप से पहचानें",
+        "⚡ रीयल-टाइम रूपांतरण, तुरंत उपयोग करने योग्य कोड उत्पन्न करें",
+        "🧪 सर्वर प्रॉक्सी के माध्यम से अंतर्निहित अनुरोध परीक्षण, कोई CORS प्रतिबंध नहीं",
+        "📋 क्लिपबोर्ड पर उत्पन्न कोड की एक-क्लिक प्रतिलिपि",
+        "💾 संबंधित भाषाओं में स्रोत फ़ाइलों के रूप में डाउनलोड का समर्थन",
+        "🔒 स्थानीय प्रसंस्करण API कुंजी और डेटा सुरक्षा सुनिश्चित करता है"
+      ],
+      "faq": [
+        {
+          "question": "मुझे cURL रूपांतरण उपकरण की आवश्यकता क्यों है?",
+          "answer": "API विकास और परीक्षण में, कई दस्तावेज़ और उपकरण (जैसे Postman) cURL कमांड उदाहरण प्रदान करते हैं। यह उपकरण इन cURL कमांड को वास्तविक परियोजनाओं में उपयोग किए जाने वाले प्रोग्रामिंग भाषा कोड में जल्दी से परिवर्तित कर सकता है, मैन्युअल लेखन से बचता है, त्रुटियों को कम करता है और दक्षता में सुधार करता है। यह विशेष रूप से तृतीय-पक्ष API के त्वरित एकीकरण की आवश्यकता वाले परिदृश्यों के लिए उपयुक्त है।"
+        },
+        {
+          "question": "उपकरण कौन से cURL पैरामीटर का समर्थन करता है?",
+          "answer": "उपकरण सामान्य रूप से उपयोग किए जाने वाले cURL पैरामीटर का समर्थन करता है, जिनमें शामिल हैं: -X/--request (HTTP विधि), -H/--header (अनुरोध हेडर), -d/--data/--data-raw (अनुरोध बॉडी), URL, आदि। कम सामान्य पैरामीटर के लिए, आप परिवर्तित कोड को मैन्युअल रूप से समायोजित कर सकते हैं।"
+        },
+        {
+          "question": "क्या उत्पन्न कोड सीधे उपयोग किया जा सकता है?",
+          "answer": "उत्पन्न कोड प्रत्येक भाषा के मानक अभ्यासों का पालन करता है और अधिकांश मामलों में सीधे उपयोग किया जा सकता है। हालांकि, वास्तविक परियोजना आवश्यकताओं के आधार पर उचित समायोजन करने की सिफारिश की जाती है: 1) API समापन बिंदु और पैरामीटर को सत्यापित करें; 2) त्रुटि हैंडलिंग तर्क जोड़ें; 3) आवश्यकतानुसार समय सीमा सेटिंग्स को समायोजित करें; 4) प्रतिक्रिया डेटा प्रारूप को संभालें; 5) आवश्यक पर्यावरण चर और कॉन्फ़िगरेशन जोड़ें।"
+        },
+        {
+          "question": "संवेदनशील जानकारी वाले cURL कमांड को कैसे संभालें?",
+          "answer": "सभी रूपांतरण संचालन आपके ब्राउज़र में स्थानीय रूप से पूर्ण होते हैं, और कमांड सामग्री किसी भी सर्वर पर अपलोड नहीं की जाती है। हालांकि, अभी भी सिफारिश की जाती है: 1) रूपांतरण से पहले संवेदनशील API कुंजी और टोकन को हटा दें या बदलें; 2) संवेदनशील कॉन्फ़िगरेशन प्रबंधित करने के लिए पर्यावरण चर का उपयोग करें; 3) कोड में पासवर्ड और कुंजी को हार्डकोड न करें; 4) उत्पन्न कोड को सीधे सार्वजनिक रिपॉजिटरी में कमिट न करें; 5) API क्रेडेंशियल प्रबंधित करने के लिए परियोजना कॉन्फ़िगरेशन फ़ाइलों का उपयोग करें।"
+        },
+        {
+          "question": "परीक्षण सुविधा की क्या सीमाएं हैं?",
+          "answer": "परीक्षण सुविधा सर्वर-साइड प्रॉक्सी के माध्यम से अनुरोध भेजती है, CORS समस्या को हल करती है। हालांकि, कुछ विचार हैं: 1) विशेष प्रमाणीकरण की आवश्यकता वाले API को सही क्रेडेंशियल कॉन्फ़िगर करने की आवश्यकता हो सकती है; 2) अनुरोध टाइमआउट डिफ़ॉल्ट पर सेट है, बहुत बड़ी प्रतिक्रियाओं में अधिक समय लग सकता है; 3) परीक्षण सुविधा API पहुंच और प्रतिक्रिया प्रारूप को जल्दी से सत्यापित करने के लिए उपयुक्त है; 4) उत्पादन वातावरण विस्तृत परीक्षण के लिए, Postman या Insomnia जैसे पेशेवर उपकरणों की सिफारिश की जाती है।"
+        }
+      ],
+      "meta": {
+        "title": "cURL कमांड कन्वर्टर - कई प्रोग्रामिंग भाषाओं में परिवर्तित करें",
+        "description": "ऑनलाइन cURL कमांड रूपांतरण उपकरण। cURL कमांड को JavaScript, Python, Node.js, PHP, Go और अन्य भाषा कोड में जल्दी से परिवर्तित करें, ऑनलाइन परीक्षण समर्थन के साथ।",
+        "keywords": "cURL कन्वर्टर,API परीक्षण,HTTP अनुरोध,कोड जनरेशन,डेवलपर उपकरण,ऑनलाइन उपकरण"
+      }
+    },
     "color-converter": {
       "name": "रंग कन्वर्टर",
       "description": "HEX, RGB, HSL और CSS रंग नामों के बीच रंग परिवर्तित करें",
